Added Swagger docu for Delete note.
